# photorank

./: .gitignore  DEPLOYMENT.md  Dockerfile  README.md  RENDER_DEPLOYMENT.md  deploy.sh  docker-compose.yml  nginx.conf  pyproject.toml  render.yaml  requirements.txt  test_local.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: ClusterView.tsx  PhotoGrid.tsx  PhotoModal.tsx  PhotoUpload.tsx
frontend/src/services/: api.ts
src/: app.py  main.py  photo_classifier.py  photo_ranker.py  utils.py
src/photorank/: app.py  main.py  photo_classifier.py  photo_classifier_lite.py  photo_ranker.py
venv311/: pyvenv.cfg
